--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Profile
 
 # User settings
 username: Jose Carapia
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
+user_description:  Hi! I am Jose, I am fascinated by Math, Computers and the Physical laws of nature. I enjoy working with different technologies and would describe myself as a full stack developer.  
 user_title: Software Developer
 email: jose@josecarapia.com
 twitter_username: lorem_ipsum
